Dirty fix of overlaps in the dialog

--- a/css/screen.css
+++ b/css/screen.css
@@ -38,6 +38,7 @@
 
 #tags {
   background : #cccccc ;
+  margin-bottom : 3em ;
 }
 
 #tags div {
@@ -57,6 +58,8 @@
 #dialog-buttons {
   position : absolute ;
   bottom : 0 ;
+  background : #cccccc ;
+  width : 100% ;
 }
 
 #card-location {
